# generative_ai_with_langchain

./: pyproject.toml
chapter2/: chat_models.ipynb
chapter3/: error_handling.ipynb  langgraph.ipynb  map_reduce.ipynb  memory.ipynb  output_parsers.ipynb  prompt_templates.ipynb  retry_with_error_output_parser.ipynb  self_consistency.ipynb
chapter4/: 01_embeddings_and_vectorstores.ipynb  document_loader.py  llms.py  rag.py  retriever.py  streamlit_app.py
chapter4 /: 01_embeddings_and_vectorstores.ipynb
