[project]
name = "generative-ai-with-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.17",
    "langchain-anthropic>=0.3.15",
    "langchain-core>=0.3.64",
    "langchain-openai>=0.3.21",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "ruff>=0.11.13",
]
